--- a/index.html
+++ b/index.html
@@ -4,10 +4,34 @@
 <meta charset="utf-8" />
 <title>Capstone Project</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="./resources/css/reset.css" type="text/css" rel="stylesheet" />
 <link href="./resources/css/style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
-<h1></h1>
+
+<!--Shool Header-->
+<header>
+<div class="logo">
+<img src="./resources/images/ic-logo.svg"  alt="school logo"/>
+<h3 class="title-bar">COLMAR<span>ACADEMY</span></h3>
+</div>
+
+<nav class="desktop">
+<a href="#">On campus</a>
+<a href="#">Online</a>
+<a href="#">or companies</a>
+<a href="#">Sign in</a>
+</nav>
+
+<nav class="mobile">
+<a href="#"><img src="./resources/images/ic-logo.svg"  alt="school logo"/></a>
+<a href="#"><img src="./resources/images/ic-on-campus.svg" alt="Campus programs" /></a>
+<a href="#"><img src="./resources/images/ic-online.svg" alt="Online programs" /></a>
+<a href="#"><img src="./resources/images/ic-login.svg" alt="Log in" /></a>
+</nav>
+</header>
+
+
 
 </body>
 </html>
