--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <nav class="desktop">
 <a href="#">On campus</a>
 <a href="#">Online</a>
-<a href="#">or companies</a>
+<a href="#">Or companies</a>
 <a href="#">Sign in</a>
 </nav>
 
@@ -31,7 +31,67 @@
 </nav>
 </header>
 
+        <!-- Main section -->
 
+<main>
 
+<!--Start banner -->
+<section class="landing-container">
+<img src="./resources/images/banner.jpg" class="banner-img1" alt="Three students studying from outside" />
+<div class="side-text">
+<h1>Learn something new everyday</h1>
+<h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+<a href="#" class="start">Start here</a>
+</div>
+</section>
+
+ <!-- Campus -->
+<section class="information">
+<div class="multi-container">
+<div class="main-pic-box">
+<img src="./resources/images/information-main.jpg" />
+<h2>It doesn't hurt to keep practicing</h2>
+<p>"Curabitur vitae libero ipsum porttior consequat. 
+Aliquam et commodo lectus, nec consequat neque. Sed non accumsan urna. 
+Phasellus sed consequat ex. Etiam eget magna laoreet efficitur dolo consequat, tristique ligula."</p>
+<h5>Emaunuel, Sr Strategist at Hiring.com</h5>
+</div>
+
+<div class="stacked-content-box">
+<div class="content-box">
+<img id="pc-pic" src="./resources/images/information-orientation.jpg" alt="Bird's eye view of orientation" title="">
+<img id="mobile-pic" src="./resources/images/information-orientation-mobile.jpg" alt="Bird's eye view of orientation">
+<div class="side-text">
+<h3>Orientation Date</h3>
+<p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+<a href="#">Read more</a>
+</div>
+</div>
+
+<div class="content-box">
+<img id="pc-pic" src="./resources/images/information-campus.jpg" alt="Indoors look at common area" title="" style="">
+<img id="mobile-pic" src="./resources/images/information-campus-mobile.jpg" alt="Indoors look at common area">
+<div class="side-text">
+<h3>Our campus</h3>
+<p>Find a campus near you</p>
+<a href="#">Read more</a>
+</div>
+</div>
+
+<div class="content-box">
+<img id="pc-pic" src="./resources/images/information-guest-lecture.jpg" alt="Oliver Sacks" title="" style="">
+<img id="mobile-pic" src="./resources/images/information-guest-lecture-mobile.jpg" alt="Oliver Sacks">
+<div class="side-text">
+<h3>Our guest lecture</h3>
+<p>Join a keynote with Oliver Sacks about music in medical treatment</p>
+<a href="#">Read more</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+</section>
+
+</main>
 </body>
 </html>
